plugins {
  id 'java'
  id 'org.springframework.boot' version '3.4.1'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'checkstyle'
}

group = 'site.beilsang'
version = '0.0.1-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  compileOnly 'org.projectlombok:lombok'
  runtimeOnly 'com.mysql:mysql-connector-j'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.security:spring-security-test'
  runtimeOnly 'com.h2database:h2'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  // jwt
  implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
  implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
  implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

  // oauth2
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

  // AWS S3
  implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.0'

  //QueryDSL
  implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
  annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
  annotationProcessor "jakarta.annotation:jakarta.annotation-api"
  annotationProcessor "jakarta.persistence:jakarta.persistence-api"

  // Swagger/OpenAPI 3
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
}

tasks.named('test') {
  useJUnitPlatform()
}

// Checkstyle 설정
checkstyle {
  toolVersion = '10.12.4'
  configFile = file("${rootDir}/style/checkstyle.xml")
}

checkstyleMain {
  source = 'src/main/java'
}

checkstyleTest {
  source = 'src/test/java'
}
